--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
             <button class="botao">Atualizar meu currículo</button>
         </div>
     </section>
+    <script scr="main.js" ></script>
 </body>
 </html>
