--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
             <button class="botao">Criar um portfolio</button>
             <button class="botao">Atualizar meu currículo</button>
         </div>
+        <diz class="abas-texto">
+            <div class"aba-contudo">
+                h3 "aba.contudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+                h4 class="aba-conteudo-titulo-secundario"Tempo para completar o objetivo /h4>
+        </div>
+        <div class="aba contudo">
+            <h3 class="aba-conteudo-titulo-principal">Criar projetos em Javascript</h3>
+            <h3 class="aba-conteudo-titulo-segundario"
     </section>
     <script scr="main.js" ></script>
 </body>
