--- a/index.html
+++ b/index.html
@@ -22,9 +22,22 @@
                 h3 "aba.contudo-titulo-principal">Estudar 4 cursos na Alura</h3>
                 h4 class="aba-conteudo-titulo-secundario"Tempo para completar o objetivo /h4>
         </div>
+                 </div>
+        <diz class="abas-texto">
+            <div class"aba-contudo">
+                h3 "aba.contudo-titulo-principal">Criar 5 projetos em Javascript</h3>
+                h4 class="aba-conteudo-titulo-secundario"Tempo para completar o objetivo /h4>
+        </div>
         <div class="aba contudo">
             <h3 class="aba-conteudo-titulo-principal">Criar projetos em Javascript</h3>
-            <h3 class="aba-conteudo-titulo-segundario"
+            <h3 class="aba-conteudo-titulo-segundario"Tempo para completar o objetivo</h4>
+           </div>
+                 </div>
+        <diz class="abas-texto">
+            <div class"aba-contudo">
+                h3 "aba.contudo-titulo-principal">Criar um portifolio com os meus 3 melhores projetos</h3>
+                h4 class="aba-conteudo-titulo-secundario"Tempo para completar o objetivo /h4>
+        </div>
     </section>
     <script scr="main.js" ></script>
 </body>
